feat(security): add roles parse in TokenService