@@ -9,6 +9,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -17,7 +18,8 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.time.Instant;
-import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
 @RestController
 @RequestMapping("/api/auth")
@@ -34,7 +36,12 @@ public class AuthController {
                 new UsernamePasswordAuthenticationToken(req.getUsername(), req.getPassword())
         );
         UserDetails principal = (UserDetails) auth.getPrincipal();
-        String token = tokenService.generateAccessToken(principal, Collections.emptyMap());
+        List<String> roles = principal.getAuthorities().stream()
+                .map(GrantedAuthority::getAuthority)
+                .map(x -> x.substring(5))
+                .toList();
+        Map<String, Object> claims = Map.of("roles", roles);
+        String token = tokenService.generateAccessToken(principal, claims);
         Instant expiresAt = Instant.now().plus(jwtProperties.getAccessTtl());
         return ResponseEntity.ok(new AuthResponse(token, expiresAt));
     }
